--- a/css/fixed-bg.css
+++ b/css/fixed-bg.css
@@ -20,3 +20,9 @@
             transform: translateZ(0);
     will-change: transform;
   }
+
+
+
+profile.container {
+  background-image: url(/resource/berkeley.png) repeat;
+}
