--- a/css/text.css
+++ b/css/text.css
@@ -1,3 +1,12 @@
 .text_code{
     font-family: "Courier New", Courier, monospace;
 }
+
+.cover-text{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.nav-link{
+    color:black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
